--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,9 @@ body {
 }
 
 .marker-source,
-.marker-text-source {
+.marker-text-source,
+.marker-target,
+.marker-text-target {
     cursor: pointer;
 }
 
@@ -34,18 +36,16 @@ body {
 
 .link.hiddenLink {
     stroke-opacity: .01;
+    pointer-events: none;
 }
 
 .link.activeLink.link.hiddenLink {
     stroke-opacity: .9;
+    pointer-events: all;
 }
 
-.link:hover {
+.hover-link:hover {
     stroke-opacity: .9;
-}
-
-.darkPlot .link:hover {
-    stroke-opacity: 0.9;
 }
 
 .markersText {
@@ -71,11 +71,17 @@ body {
     font-size: 1.5em;
 }
 
-.dotViewVis,
-.linearViewVis {
+.genomeViewSVG,
+.dotViewSVG,
+.chromosomeViewRootSVG {
     margin: 20px auto 40px auto;
     display: block;
     border-radius: 1em;
+}
+
+.chromosomeViewRootSVG,
+.dotViewSVG {
+    border: 2px solid silver;
 }
 
 .dot-plot-markers {
