--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,7 @@ body {
 .genomeViewSVG,
 .dotViewSVG,
 .chromosomeViewRootSVG,
-.blockViewRootSVG {
+.blockViewRoot {
     margin: 20px auto 40px auto;
     display: block;
     border-radius: 1em;
@@ -84,7 +84,7 @@ body {
 
 .chromosomeViewRootSVG,
 .dotViewSVG,
-.blockViewRootSVG {
+.blockViewRoot {
     border: 2px solid silver;
 }
 
@@ -157,3 +157,59 @@ polygon.blockView-polylinks {
 polygon.blockView-polylinks:hover {
     opacity: 1;
 }
+
+.axis--x text {
+    fill: grey;
+}
+
+.axis--x path {
+    stroke: grey;
+}
+
+.axis--x line {
+    stroke: grey;
+}
+
+
+/* /////////////////////////////////// */
+
+
+/* styling for d3 drag */
+
+.ticks {
+    font: 10px sans-serif;
+}
+
+.track,
+.track-inset,
+.track-overlay {
+    stroke-linecap: round;
+}
+
+.track {
+    stroke: #000;
+    stroke-opacity: 0.3;
+    stroke-width: 10px;
+}
+
+.track-inset {
+    stroke: #ddd;
+    stroke-width: 8px;
+}
+
+.track-overlay {
+    pointer-events: stroke;
+    stroke-width: 50px;
+    stroke: transparent;
+    cursor: pointer;
+}
+
+.handle {
+    fill: #fff;
+    stroke: #000;
+    stroke-opacity: 0.5;
+    stroke-width: 1.25px;
+}
+
+
+/* //////////////////////////////////////////////// */
